--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -349,8 +349,8 @@ $input-background-focus: $white;
 $input-background-disabled: $light-gray;
 $input-border: 1px solid $medium-gray;
 $input-border-focus: 1px solid $dark-gray;
-$input-shadow: inset 0 1px 2px rgba($black, 0.1);
-$input-shadow-focus: 0 0 5px $medium-gray;
+$input-shadow:none;
+$input-shadow-focus: none;
 $input-cursor-disabled: default;
 $input-transition: box-shadow 0.5s, border-color 0.25s ease-in-out;
 $input-number-spinners: true;
@@ -567,4 +567,4 @@ $topbar-unstack-breakpoint: medium;
 // theme colors
 // --------------------
 $dark-blue: #37515e;
-$green:#35ba67;
+$green: #35ba67;
