--- a/src/scss/components/_marker.scss
+++ b/src/scss/components/_marker.scss
@@ -6,10 +6,20 @@
 $marker-width: 2.3rem;
 $marker-height: 2.3rem;
 
-.marker {
-
+@mixin markerInitialState() {
   background: $light-gray;
   border: 2px solid $dark-gray;
+  color: $dark-gray;
+}
+
+@mixin markerHoverState() {
+  background: $green;
+  border: 2px solid darken($green, 20%);
+  color: $white;
+}
+
+.marker {
+  @include markerInitialState();
 
   border-radius: 50%;
 
@@ -20,12 +30,9 @@ $marker-height: 2.3rem;
 
   font-size: 1.5rem;
   text-align: center;
-  color: $dark-gray;
 
-  &:hover{
-    background: $green;
-    border: 2px solid darken($green, 20%);
-    color: $white;
+  &:hover {
+    @include markerHoverState();
   }
 
 }
